--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,27 @@
   }
 }
 
+.App {
+  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App-header {
+  background-color: #282c34;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.App-footer {
+  background-color: #282c34;
+  color: white;
+  text-align: center;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
+  margin-bottom: 60px;
+}
